--- a/public/css/style-homepage.css
+++ b/public/css/style-homepage.css
@@ -1,21 +1,22 @@
 .logo{
     background-color: #fff;
     padding-top:10px;
+    border-top: 1px solid LightGray;
     border-left: 1px solid LightGray;
     border-right: 1px solid LightGray;
     border-bottom: 1px solid LightGray;
-    
+
 
 }
 .latestArticle{
     background-color: #fff;
     padding-top:10px;
     border-radius: 3px;
-    border: 1px solid LightGray;
-    
+    border: 1px solidLightGray;
+
 }
 h3{
-    border-left: 6px solid #FDE313;
-    background-color: #fffff2;
+    border-left: 6px solid #1565C0;
+    background-color: #f4f2ff;
 
 }
