--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -20,8 +20,9 @@ body {
     border-bottom: 2px solid  #1565C0;
 }
 footer{
-    background-color:#1565C0   ;
-    border-top: 1px solid  rgba(0,0,0,.5);
+    background-color:rgb(255, 255, 255)   ;
+    border-top: 1px solid  #1565C0;
+    color: #1565C0;
 }
 a{
     color:#c31432;
